[metadata]
name = BCTMark
version = 0.0.1
keywords = enoslib, evaluation, reproducible research, Grid5000, Chameleon Cloud, Vagrant
license_file = LICENSE.txt
url = 
author = Dimitri Saingre
author_email = dimitri.saingre@imt-atlantique.fr
long_description = file: README.rst
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
setup_requires =
    setuptools>=39.0.1
    wheel>=0.31.0
install_requires =
   enoslib>=4.9.0
   click>=6.7,<7
   influxdb>=5.2.3
   web3>=5.0.0
   pyyaml>=5.1.2

[options.packages.find]
exclude =
    docs

[options.entry_points]
console_scripts =
    bctmark = bctmark.cli:cli

[bdist_wheel]
universal=1
